WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63373
REGRESSION (
r77740
): Shadow DOM pseudo elements aren't matching when combined with descendant selectors
https://bugs.webkit.org/show_bug.cgi?id=63373
Summary
REGRESSION (r77740): Shadow DOM pseudo elements aren't matching when combined...
Dimitri Glazkov (Google)
Reported
2011-06-24 19:30:44 PDT
Originally reported here:
http://crbug.com/86595
Turns out, when building a parent stack frame in CSSStyleSelector, we inadvertently empty out the identifier list for all shadow DOM elements. The fix is to employ shadow DOM-aware traversal, rather than using parentElement.
Attachments
Patch
(8.62 KB, patch)
2011-06-24 20:14 PDT
,
Dimitri Glazkov (Google)
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-01
(1.32 MB, application/zip)
2011-06-24 20:56 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-06-24 20:14:12 PDT
Created
attachment 98572
[details]
Patch
WebKit Review Bot
Comment 2
2011-06-24 20:56:31 PDT
Comment on
attachment 98572
[details]
Patch
Attachment 98572
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8936642
New failing tests: fast/css/pseudo-cache-stale.html
WebKit Review Bot
Comment 3
2011-06-24 20:56:36 PDT
Created
attachment 98574
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Dimitri Glazkov (Google)
Comment 4
2011-06-25 10:04:30 PDT
Comment on
attachment 98572
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=98572&action=review
> Source/WebCore/css/CSSStyleSelector.cpp:669 > + } else if (!parent->parentOrHostNode()) {
This should've been parentOrHostElement. Fixed on landing.
Dimitri Glazkov (Google)
Comment 5
2011-06-25 10:04:48 PDT
Committed
r89742
: <
http://trac.webkit.org/changeset/89742
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug