2011-06-24  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        REGRESSION (r77740): Shadow DOM pseudo elements aren't matching when combined with descendant selectors
        https://bugs.webkit.org/show_bug.cgi?id=63373

        * fast/css/unknown-pseudo-element-matching-expected.txt: Updated results.
        * fast/css/unknown-pseudo-element-matching.html: Added more tests.
2011-06-24  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION (r77740): Shadow DOM pseudo elements aren't matching when combined with descendant selectors
        https://bugs.webkit.org/show_bug.cgi?id=63373

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::pushParentStackFrame): Changed to use parentOrHostElement.
        (WebCore::CSSStyleSelector::pushParent): Ditto.
        * dom/Node.cpp:
        (WebCore::Node::parentOrHostElement): Added.
        * dom/Node.h:

Canonical link: https://commits.webkit.org/79038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89742 268f45cc-cd09-0410-ab3c-d52691b4dbfc